--- a/mindcontrol.conf
+++ b/mindcontrol.conf
@@ -1,4 +1,4 @@
 port 1234
-ip 192.168.1.14
-last 2
-display 100 99 192.168.1.41
+ip ê∑Çq
+last 0
+display 99 100 192.168.1.41 0 0 0 0 4 1.000000 1
